# ChangeLog for media-tv/xbmc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Dec 2010; kTitan xbmc-9999.ebuild:
  changed to current git "overlay"

  07 Aug 2010; kTitan xbmc-9999.ebuild:
  fixed cvs depends
  sync with gentoo live ebuild
  removed autotool run from libbdnav
  reenable goom

  02 Jun 2010; kTitan +xbmc-9999.ebuild, +metadata.xml:
  added dependcy net-libs/libmicrohttpd and reenabled webserver (gentoo bug
  #305229)
  forced to use internal python, other things stay external (gentoo bug
  #304521)
  disabled "enable-goom" because of current build failures
  fixed installion by using einstall, manually copy docs
  removed "hal" compile use flag because its no longer supported upstream

*xbmc-9999 (31 May 2010)

  31 May 2010; kTitan +xbmc-9999.ebuild, +metadata.xml:
  copied from gentoo portage rev v1.56
