@@ -2,9 +2,12 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <use>
+ <flag name='bluray'>Enable playback of Blu-ray filesystems</flag>
  <flag name='midi'>Support MIDI files</flag>
- <flag name='xrandr'>Support X randr extension</flag>
+ <flag name="rtmp">Enable Real Time Messaging Protocol using librtmp</flag>
  <flag name='vaapi'>Enables VAAPI (Video Acceleration API) for hardware decoding</flag>
  <flag name='vdpau'>enable support for Video Decode and Presentation API for Unix</flag>
+ <flag name='webserver'>Enable internal webserver</flag>
+ <flag name='xrandr'>Support X randr extension</flag>
 </use>
 </pkgmetadata>
